Working version. Only on iphone photo upload/link does not work correctly.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -207,7 +207,7 @@ div.inspctr-full-imagebox img {
 }
 
 .inspctr-foreground.button.button-block {
-	position: relative;
-	margin-top: -80px;
+	position: fixed;
+	bottom: 20px;
 	z-index: 100;
 }
